[gd_scene load_steps=2 format=3 uid="uid://cpfhq7fttee23"]

[ext_resource type="Script" path="res://scripts/hurt_box.gd" id="1_srca4"]

[node name="hurt_box" type="Area2D"]
script = ExtResource("1_srca4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
